fixed layout issue from mission component

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -208,6 +208,7 @@ li {
   margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
+  height: 450px;
 }
 
 @media (min-width: 920px) {
